css/style.css
/* -------------------------------------------------------

Land Agency // 

Land-Agency.com

Version: 1

Author: Jonathan Culp

Contact: JonathanCulp.com

----------------------------------------------------- */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0;}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}body{line-height:1;}ol,ul{list-style:none;}blockquote,q{quotes:none;}blockquote:before,blockquote:after,q:before,q:after{content:none;}table{border-collapse:collapse;border-spacing:0;}

body {
    font-family: 'OSPDINDIN',  Helvetica, Arial, sans-serif;
    background-color: #fff;
    /* background-image: url(../images/LeavesBKGD.png);
    background-repeat: repeat;
    background-size: calc(1.25*711px) calc(1.25*539px); */
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizedLegibility;
}

#nav {
    position: fixed;
    height: 50px;
    width: 100%;
    margin-top: 0px;
    font-size: 1.5em;
    overflow: hidden;
}

#logo {
    position: absolute;
    float: left;
    bottom: 0px;
    margin-left: 5%;
    width: 400px;
}

#logo a h1{
    width: 340px;
    height: 100px;
    background: url(../images/logo.png) no-repeat left bottom;
    text-indent: -9999px;
    padding-top: 0px;
}

#menu {
    position: relative;
    float: right;
    margin-right: 5%;
    font-family: 'OSPDINDIN', Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    font-weight: 400;
    padding-top: 25px;
    color: #ff6666;
    background-color: #fff;
}

#menu ul li {
    padding: 5px;

}


a {
    text-decoration: none;
    padding: 10px;
    color: #000;
}

li:hover a{
    color: #f9ed32;
    text-decoration: underline;
}

#Selected{
    color: #f9ed32;
    text-decoration: underline;
}

ul li{
    list-style: none;
    display: inline;
}

#banner{
    position: absolute;
    width: calc(2*340px);
    height: calc(2*225px);
    left: 7.2%;
    top: 11%;
    background: url(../images/LandAgency-Logo.svg) no-repeat left bottom;
}

#info {
    position: absolute;
    width: calc(1.75*340px);
    height: calc(1.75*225px);
    left: 65%;
    top: 65%;
    font-family: 'Open Sans', sans-serif;
    line-height: 150%;
    font-weight: normal;
    font-size: 1.5em;
    color: #000;
}

h2 {
    padding: 0px 0px -2px 2px;
    display: inline;
    background-color: #000;
    color: #fff;
    
}


/* CONTACT */

#wrapper div{
    width: 940px;
    margin: 50px auto;
}

